# AgentDemo

./: .gitignore  README.md  app.py  chainlit.md  pyproject.toml
notebooks/AI通识与基础/: 1.OpenAi.ipynb
notebooks/LangChain入门/: 2.2models.ipynb  2.4_prompt.ipynb  2.5_tools.ipynb  2.6memory.ipynb  2.7_实战.ipynb  helloword.ipynb  messages.ipynb
src/: agent.py  config.py  prompts.py  rag.py  tools.py
tests/: conftest.py  test_agent.py  test_rag.py  test_tools.py
