[project]
name = "research-assistant-agent"
version = "0.1.0"
description = "基于 LangChain + LangGraph 构建的智能研究助手 Agent，支持网页搜索、笔记管理和多轮对话记忆"
authors = [
    { name = "30125", email = "3012546202@qq.com" }
]
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.9, <3.14"
dependencies = [
    "chainlit>=2.11.1",
    "chromadb>=1.5.9",
    "dashscope>=1.26.4",
    "langchain>=1.3.11",
    "langchain-chroma>=1.1.0",
    "langchain-community>=0.4.2",
    "langchain-deepseek>=1.1.0",
    "langchain-tavily>=0.2.18",
    "langchain-text-splitters>=0.3.0",
    "langgraph>=1.2.7",
    "langgraph-checkpoint-sqlite>=3.1.0",
    "pymilvus>=3.0.0",
    "python-dotenv>=1.2.2",
]

[dependency-groups]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24.0",
]

[[tool.uv.index]]
url = "https://pypi.tuna.tsinghua.edu.cn/simple"
default = true
